--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Surajxxx/Project-Product-Management#readme",
   "dependencies": {
     "aws-sdk": "^2.1111.0",
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "currency-symbol-map": "^5.0.1",
